force-app/main/default/objects/Contributor__c/Contributor__c.object-meta.xml
<CustomObject>
    <label>Contributor</label>
    <nameField>
        <label>Contributor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contributors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>