force-app/main/default/objects/Contributor__c/fields/Current_Rank__c.field-meta.xml
<CustomField>
    <fullName>Current_Rank__c</fullName>
    <label>Current Rank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Diamond</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>