force-app/main/default/objects/Contributor__c/fields/GitHub_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>GitHub_Profile_URL__c</fullName>
    <label>GitHub Profile URL</label>
    <type>Url</type>
</CustomField>