force-app/main/default/objects/Contributor__c/fields/Total_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Total_Contributions__c</fullName>
    <label>Total Contributions</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>