force-app/main/default/objects/Contributor__c/validationRules/LinkedIn_Profile_Requires_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>LinkedIn_Profile_Requires_Email</fullName>
    <active>true</active>
    <description>Contributors with a LinkedIn profile must have an email address.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(LinkedIn_Profile__c)),
ISBLANK(Email__c)
)</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Email is required when a LinkedIn Profile is provided.</errorMessage>
</ValidationRule>