force-app/main/default/objects/Contributor__c/validationRules/Reputation_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Reputation_Cannot_Be_Negative</fullName>
    <active>true</active>
    <description>Prevents negative reputation scores.</description>
    <errorConditionFormula>Reputation_Score__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Reputation_Score__c</errorDisplayField>
    <errorMessage>Reputation Score cannot be less than 0.</errorMessage>
</ValidationRule>