force-app/main/default/objects/Contributor__c/validationRules/Total_Contributions_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Contributions_Cannot_Be_Negative</fullName>
    <active>true</active>
    <description>Prevents negative contribution counts.</description>
    <errorConditionFormula>Total_Contributions__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Total_Contributions__c</errorDisplayField>
    <errorMessage>Total Contributions cannot be less than 0.</errorMessage>
</ValidationRule>